# bernstein-experiment

./: .gitignore  bernstein.py  bernstein2.py  bernstein_to_c.py  bernstein_to_c2.py  generate_quadrules.py
gpu/: CMakeLists.txt  bernstein.h  main.cpp
gpu/quadrules/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt
